--- a/src/components/blogs/BlogSection.module.scss
+++ b/src/components/blogs/BlogSection.module.scss
@@ -38,6 +38,10 @@
 
   .card {
     flex: 0 0 25%; // Each card takes up 25% of the width (4 cards visible at a time)
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 300px;
     overflow: hidden;
     background-color: #fff;
     border-radius: 8px;
@@ -49,11 +53,17 @@
       box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
     }
 
-    .image {
-      background-size: cover;
-      background-position: center;
+    .imageWrapper {
+      position: relative;
+      width: 100%;
       height: 200px;
       border-radius: 8px 8px 0 0;
+      overflow: hidden;
+    
+      .image {
+        object-fit: cover;
+        border-radius: 8px 8px 0 0;
+      }
     }
 
     .content {
