--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,6 @@
 :root {
-  --background: #171717; 
-  --foreground: #ffffff;
+  --background: #ffffff; 
+  --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
