--- a/src/components/places/PlacesSection.module.scss
+++ b/src/components/places/PlacesSection.module.scss
@@ -46,7 +46,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    height: 300px;
+    height: 380px;
     overflow: hidden;
     background-color: #fff;
     border-radius: 8px;
@@ -60,7 +60,7 @@
     .imageWrapper {
       position: relative;
       width: 100%;
-      height: 200px;
+      height: 100%;
       border-radius: 8px 8px 0 0;
       overflow: hidden;
     
